@@ -3,30 +3,18 @@ AM_CPPFLAGS = -I$(top_srcdir)
 TESTS_ENVIRONMENT = top_builddir=$(top_builddir)
 
 TESTS = \
-	test_file \
-	test_store-retrieve \
 	test_walk \
 	test_iterator \
+	test_store-retrieve \
+	test_file \
 	$(NULL)
 
 check_PROGRAMS = \
-	test_file \
-	test_store-retrieve \
 	test_walk \
 	test_iterator \
+	test_store-retrieve \
+	test_file \
 	$(NULL)
-
-test_file_SOURCES = \
-	test_file.c \
-	utils.c \
-	$(NULL)
-test_file_LDADD = $(top_builddir)/datrie/libdatrie.la
-
-test_store_retrieve_SOURCES = \
-	test_store-retrieve.c \
-	utils.c \
-	$(NULL)
-test_store_retrieve_LDADD = $(top_builddir)/datrie/libdatrie.la
 
 test_walk_SOURCES = \
 	test_walk.c \
@@ -39,4 +27,16 @@ test_iterator_SOURCES = \
 	utils.c \
 	$(NULL)
 test_iterator_LDADD = $(top_builddir)/datrie/libdatrie.la
+
+test_store_retrieve_SOURCES = \
+	test_store-retrieve.c \
+	utils.c \
+	$(NULL)
+test_store_retrieve_LDADD = $(top_builddir)/datrie/libdatrie.la
+
+test_file_SOURCES = \
+	test_file.c \
+	utils.c \
+	$(NULL)
+test_file_LDADD = $(top_builddir)/datrie/libdatrie.la
 
